--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         <activity
             android:name=".SignInActivity"
             android:exported="true" />
+        <activity
+            android:name=".SignUpActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
