--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,13 @@
         </activity>
         <activity
             android:name=".auth.SignInActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".auth.SignUpActivity"
-            android:exported="true" />
+            android:exported="false" />
+        <activity
+            android:name=".home.HomeActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
