--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel:2.5.1'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'androidx.navigation:navigation-ui:2.5.3'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.mikepenz:fastadapter:5.7.0'
+    implementation 'com.mikepenz:fastadapter-extensions-binding:5.7.0'
 }
