--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.5.3'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'com.google.android.material:material:1.9.0'
-    implementation 'com.mikepenz:fastadapter:5.7.0'
     implementation 'com.mikepenz:fastadapter-extensions-binding:5.7.0'
+    implementation 'com.mikepenz:fastadapter-extensions-drag:5.7.0'
+    implementation 'com.mikepenz:fastadapter-extensions-swipe:5.7.0'
+    implementation 'com.mikepenz:fastadapter-extensions-utils:5.7.0'
+    implementation 'com.mikepenz:fastadapter:5.7.0'
 }
